--- a/projectStack/src/styles.scss
+++ b/projectStack/src/styles.scss
@@ -32,6 +32,9 @@ outline: 0 !important;
 .bg-pink{
   background-color: #e25252;
 }
+.color-black{
+  color: #333333;
+}
 .color-pink{
  color: #e25252;
 }
@@ -48,4 +51,10 @@ outline: 0 !important;
 }
 .pointer{
   cursor: pointer;
+}
+
+.fullWidthHeight{
+  width: 100vw;
+  overflow-x: hidden;
+  min-height: 100vh;
 }
