--- a/projectStack/src/styles.scss
+++ b/projectStack/src/styles.scss
@@ -2,7 +2,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family:  Montserrat, Roboto, "Helvetica Neue", sans-serif; }
 
 .w-100vw{
   width:100vw;
@@ -13,8 +13,11 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   height:100vh;
 }
 
-.bg-white{
-  background-color: #efefef;
+.bg-white, body{
+  background-color: #efefef !important;
+}
+.color-black{
+  color: #666666;
 }
 .color-white{
   color: #efefef;
@@ -33,7 +36,7 @@ outline: 0 !important;
   background-color: #e25252;
 }
 .color-black{
-  color: #333333;
+  color: #666666;
 }
 .color-pink{
  color: #e25252;
