--- a/projectStack/src/app/login-signup/adding-user-data/adding-user-data.component.html
+++ b/projectStack/src/app/login-signup/adding-user-data/adding-user-data.component.html
@@ -1,5 +1,6 @@
 <div class="fullWidthHeight bg-pink d-flex justify-content-center align-items-center">
   <div style="width: 60vw; min-height: 65vh;  border-radius: 0.5rem;" class="px-3 py-2 shadow-lg bg-white ">
+  <section *ngIf="step ==1">
     <h4 class="font-weight-light font-main text-center color-black mt-4">
       <span class="font-weight-bold ">Now,</span> Let’s Start By Getting To Know
       <h3 class="font-weight-bold mt-2 ">
@@ -7,7 +8,7 @@
       </h3>
     </h4>
     <div class="d-flex justify-content-center mt-5">
-      <div class="mx-5">
+      <div class="mx-5" (click)="selectUserType(1)">
           <div class="iconBox d-flex justify-content-center align-items-center">
             <img src="/assets/teacher.svg" width="50%" height="auto">
 
@@ -17,7 +18,7 @@
               Instructor
           </h6 >
       </div >
-      <div class="mx-5">
+      <div class="mx-5" (click)="selectUserType(2)">
         <div class="iconBox d-flex justify-content-center align-items-center">
           <img src="/assets/student.svg" width="50%" height="auto">
         </div>
@@ -26,9 +27,119 @@
             Student
         </h6>
       </div>
+
+  </div>
+</section>
+
+<section *ngIf="step == 2">
+  <div >
+    <h4 class="font-weight-light text-center mt-1">
+      Setup Your Profile.
+    </h4>
+    <img src="/assets/upload.svg" class="d-block mx-auto mt-2" height="235px" width="auto">
+    <div style="border-top:solid 1px rgba(226,82,82,0.2); width: 50%; " class="mx-auto mb-2">
+
+    </div>
+    <h6 class="font-weight-light text-center mt-1">
+      Professional Profile Picture Can Help Attract Better Opportunities
+    </h6>
+    <button mat-flat-button color="primary" class="d-block mx-auto font-weight-lighter font-main mt-5 mb-3 much-rounded">Upload Profile Picture</button>
+  </div>
+</section>
+
+<section *ngIf="step == 3">
+  <div >
+    <h4 class="font-weight-light text-center mt-1">
+      List Your Skills
+    </h4>
+    <img src="/assets/skills.svg" class="d-block mx-auto mt-2" height="235px" width="auto">
+    <div style="border-top:solid 1px rgba(226,82,82,0.2); width: 50%; " class="mx-auto mb-2">
+
+    </div>
+    <h6 class="font-weight-light text-center mt-1">
+      Evey Skill Counts, So Make Sure To List Them All.
+    </h6>
+    <mat-form-field class="mt-3 w-75 mx-auto d-block">
+      <mat-label>Skills</mat-label>
+      <mat-select multiple>
+        <mat-option *ngFor="let skill of skills"  [value]="skill.value">
+          {{skill.Desc}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <button mat-flat-button color="primary" class="d-block mx-auto font-weight-lighter font-main mt-3 mb-2 much-rounded">Proceed</button>
+
+  </div>
+</section>
+
+<section *ngIf="step == 4">
+  <div >
+    <h4 class="font-weight-light text-center mt-1">
+      Upload Your Resume
+    </h4>
+    <img src="/assets/resume.svg" class="d-block mx-auto mt-2" height="235px" width="auto">
+    <div style="border-top:solid 1px rgba(226,82,82,0.2); width: 50%; " class="mx-auto mb-2">
+
     </div>
 
+    <h6 class="font-weight-light text-center mt-1">
+      Here's Where It Get Competitive, So Sure Make To Show Off Your Work.
+    </h6>
 
+    <button mat-flat-button color="primary" class="d-block mx-auto font-weight-lighter font-main mt-5 mb-3 much-rounded">Upload Your Resume</button>
+
+  </div>
+</section>
+<section *ngIf="step == 5">
+  <div >
+    <h4 class="font-weight-light text-center mt-1">
+      Tell Is What Interests You ?
+    </h4>
+    <img src="/assets/intreset.svg" class="d-block mx-auto mt-4" height="235px" width="auto">
+
+    <h6 class="font-weight-light text-center mt-1">
+      Just More Typical Information So We Can Do Better Matches
+    </h6>
+    <div>
+      <mat-form-field class="d-block mx-auto mt-2" style="width: 220px;">
+        <input type="text" matInput placeholder="University ..." [matAutocomplete]="auto">
+      </mat-form-field>
+      <mat-autocomplete #auto="matAutocomplete">
+        <mat-option *ngFor="let option of university" [value]="option">
+          {{ option }}
+        </mat-option>
+      </mat-autocomplete>
+    </div>
+
+  </div>
+  <button mat-flat-button color="primary" class="d-block mx-auto font-weight-lighter font-main mt-3 mb-2 much-rounded">Complete</button>
+
+</section>
+<section *ngIf="step == 6">
+  <div >
+    <h4 class="font-weight-light text-center mt-1">
+      Finally
+    </h4>
+    <img src="/assets/university.svg" class="d-block mx-auto mt-2" height="235px" width="auto">
+
+    <h6 class="font-weight-light text-center mt-1">
+      Just More Typical Information So We Can Do Better Matches
+    </h6>
+    <div>
+      <mat-form-field class="d-block mx-auto mt-2" style="width: 220px;">
+        <input type="text" matInput placeholder="University ..." [matAutocomplete]="auto">
+      </mat-form-field>
+      <mat-autocomplete #auto="matAutocomplete">
+        <mat-option *ngFor="let option of university" [value]="option">
+          {{ option }}
+        </mat-option>
+      </mat-autocomplete>
+    </div>
+
+  </div>
+  <button mat-flat-button color="primary" class="d-block mx-auto font-weight-lighter font-main mt-3 mb-2 much-rounded">Complete</button>
+
+</section>
   </div>
 
 </div>
