--- a/projectStack/src/app/login-signup/login-signup.component.html
+++ b/projectStack/src/app/login-signup/login-signup.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-between w-100wh h-100vh position-relative overflow-hidden">
+<div class="d-flex justify-content-between w-100wh h-100vh position-relative overflow-hidden" style="background:#fff;">
 <div class="position-absolute h-100 bg-pink loginSlideAnimation"
 [class.w-60]="!isUserCompeletingHisData"
 [class.w-100]="isUserCompeletingHisData"
