--- a/projectStack/src/app/login-signup/login/login.component.html
+++ b/projectStack/src/app/login-signup/login/login.component.html
@@ -4,7 +4,7 @@
       <h4 class="font-weight-lighter d-inline"> Enter Your Credentials</h4>
     </h3>
 
-      <form class="mt-3 px-5">
+      <div class="mt-3 px-5">
         <mat-form-field appearance="outline" class="w-100 px-2 pt-5">
             <mat-label>Email</mat-label>
             <input matInput placeholder="123@example.com">
@@ -33,7 +33,7 @@
 
         </button>
 
-      </form>
+      </div>
 
 
 
