--- a/projectStack/src/app/login-signup/signup/signup.component.html
+++ b/projectStack/src/app/login-signup/signup/signup.component.html
@@ -4,30 +4,30 @@
   <h4 class="font-weight-lighter d-inline"> Start Building Your Team</h4>
 </h3>
 
-  <form class="mt-3 px-5">
+  <form class="mt-3 px-5" [formGroup]="signUpFormGroup">
     <div class="d-flex pt-5 ">
         <mat-form-field appearance="outline" class="w-50 px-2">
             <mat-label>First Name</mat-label>
-            <input matInput placeholder="John">
+            <input matInput formControlName="firstName" placeholder="John">
         </mat-form-field>
         <mat-form-field appearance="outline" class="w-50 px-2">
             <mat-label>Last Name</mat-label>
-            <input matInput placeholder="Millar">
+            <input matInput formContorlName="lastName" placeholder="Millar">
         </mat-form-field>
     </div>
     <mat-form-field appearance="outline" class="w-100 px-2">
         <mat-label>Email</mat-label>
-        <input matInput placeholder="123@example.com">
+        <input matInput formControlName="email" placeholder="123@example.com">
     </mat-form-field>
     <div class="d-flex ">
         <mat-form-field appearance="outline" class="w-50 px-2">
             <mat-label>Password</mat-label>
-            <input matInput [type]="passwordHide ? 'password' : 'text'" >
+            <input matInput formControlName="password"  [type]="passwordHide ? 'password' : 'text'" >
             <mat-icon matSuffix (click)="passwordHide = !passwordHide" class="iconPassword">{{passwordHide ? 'visibility_off' : 'visibility'}}</mat-icon>
         </mat-form-field>
         <mat-form-field appearance="outline" class="w-50 px-2">
             <mat-label>Confirm Password</mat-label>
-            <input matInput [type]="passwordConfirmHide ? 'password' : 'text'" >
+            <input matInput  formControlName="confirmPassword" [type]="passwordConfirmHide ? 'password' : 'text'" >
             <mat-icon matSuffix (click)="passwordConfirmHide = !passwordConfirmHide" class="iconPassword">{{passwordConfirmHide ? 'visibility_off' : 'visibility'}}</mat-icon>
 
         </mat-form-field>
