--- a/projectStack/src/app/login-signup/adding-user-data/adding-user-data.component.html
+++ b/projectStack/src/app/login-signup/adding-user-data/adding-user-data.component.html
@@ -43,8 +43,9 @@
     <h6 class="font-weight-light text-center mt-1">
       Professional Profile Picture Can Help Attract Better Opportunities
     </h6>
-    <button mat-flat-button color="primary" class="d-block mx-auto font-weight-lighter font-main mt-5 mb-3 much-rounded">Upload Profile Picture</button>
+    <custom-button color="primary" (click)="fileInput.click()" [loading]="loading" [passedClass]="{'d-block':true, 'mx-auto':true, 'font-weight-lighter':true, 'font-main':true, 'mt-5':true, 'mb-3':true, 'much-rounded':true}">Upload Profile Picture</custom-button>
   </div>
+  <input type="file" class="d-none" (change)="uploadFileHandler($event)" #fileInput/>
 </section>
 
 <section *ngIf="step == 3">
@@ -61,13 +62,13 @@
     </h6>
     <mat-form-field class="mt-3 w-75 mx-auto d-block">
       <mat-label>Skills</mat-label>
-      <mat-select multiple>
-        <mat-option *ngFor="let skill of skills"  [value]="skill.value">
+      <mat-select multiple [formControl]="group.get('skills')">
+        <mat-option *ngFor="let skill of skills"  [value]="skill.Value">
           {{skill.Desc}}
         </mat-option>
       </mat-select>
     </mat-form-field>
-    <button mat-flat-button color="primary" class="d-block mx-auto font-weight-lighter font-main mt-3 mb-2 much-rounded">Proceed</button>
+    <button mat-flat-button color="primary" class="d-block mx-auto font-weight-lighter font-main mt-3 mb-2 much-rounded" (click)="validateSkills()">Proceed</button>
 
   </div>
 </section>
@@ -86,7 +87,8 @@
       Here's Where It Get Competitive, So Sure Make To Show Off Your Work.
     </h6>
 
-    <button mat-flat-button color="primary" class="d-block mx-auto font-weight-lighter font-main mt-5 mb-3 much-rounded">Upload Your Resume</button>
+    <custom-button color="primary" (click)="resumeInput.click()" [loading]="loading" [passedClass]="{'d-block':true, 'mx-auto':true, 'font-weight-lighter':true, 'font-main':true, 'mt-5':true, 'mb-3':true, 'much-rounded':true}">Upload Resume</custom-button>
+    <input type="file" class="d-none" (change)="uploadResume($event)" #resumeInput/>
 
   </div>
 </section>
@@ -101,18 +103,34 @@
       Just More Typical Information So We Can Do Better Matches
     </h6>
     <div>
-      <mat-form-field class="d-block mx-auto mt-2" style="width: 220px;">
-        <input type="text" matInput placeholder="University ..." [matAutocomplete]="auto">
+      <mat-form-field class="col-10 mx-auto d-block">
+        <mat-chip-list #chipList>
+          <mat-chip
+            *ngFor="let item of group.get('interests').value"
+            [selectable]="true"
+            [removable]="true"
+            (removed)="removeInterestChip(item)">
+            {{findInterestFromValue(item).Desc}}
+            <mat-icon matChipRemove>cancel</mat-icon>
+          </mat-chip>
+          <input
+            placeholder=""
+            #fruitInput
+            [matAutocomplete]="auto"
+            [matChipInputFor]="chipList"
+            [matChipInputSeparatorKeyCodes]="[188, 13]"
+            (matChipInputTokenEnd)="addInterestChip($event)">
+        </mat-chip-list>
+        <mat-autocomplete #auto="matAutocomplete" (optionSelected)="interestSelectedFromAutoComplete($event)">
+          <mat-option *ngFor="let item of notSelectedInterests" [value]="item.Value">
+            {{item.Desc}}
+          </mat-option>
+        </mat-autocomplete>
       </mat-form-field>
-      <mat-autocomplete #auto="matAutocomplete">
-        <mat-option *ngFor="let option of university" [value]="option">
-          {{ option }}
-        </mat-option>
-      </mat-autocomplete>
     </div>
 
   </div>
-  <button mat-flat-button color="primary" class="d-block mx-auto font-weight-lighter font-main mt-3 mb-2 much-rounded">Complete</button>
+  <button mat-flat-button color="primary" class="d-block mx-auto font-weight-lighter font-main mt-3 mb-2 much-rounded" (click)="validateInterests()">Complete</button>
 
 </section>
 <section *ngIf="step == 6">
@@ -125,19 +143,19 @@
     <h6 class="font-weight-light text-center mt-1">
       Just More Typical Information So We Can Do Better Matches
     </h6>
-    <div>
-      <mat-form-field class="d-block mx-auto mt-2" style="width: 220px;">
-        <input type="text" matInput placeholder="University ..." [matAutocomplete]="auto">
+    <div class="d-flex justify-content-center">
+      <mat-form-field  class="col-10 mx-auto d-block mt-3" style="width: 220px;">
+        <input type="text"  matInput  placeholder="University ..." [matAutocomplete]="auto">
       </mat-form-field>
-      <mat-autocomplete #auto="matAutocomplete">
-        <mat-option *ngFor="let option of university" [value]="option">
-          {{ option }}
+      <mat-autocomplete #auto="matAutocomplete" (optionSelected)="setUnivarsity($event)" >
+        <mat-option *ngFor="let option of university" [value]="option.Name">
+          {{ option.Name }}
         </mat-option>
       </mat-autocomplete>
     </div>
 
   </div>
-  <button mat-flat-button color="primary" class="d-block mx-auto font-weight-lighter font-main mt-3 mb-2 much-rounded">Complete</button>
+  <button mat-flat-button color="primary" [disabled]="!isUniversityValid" class="d-block mx-auto font-weight-lighter font-main mt-3 mb-2 much-rounded" (click)="completeSignup()">Complete</button>
 
 </section>
   </div>
