--- a/projectStack/src/app/login-signup/complete-your-data/complete-your-data.component.html
+++ b/projectStack/src/app/login-signup/complete-your-data/complete-your-data.component.html
@@ -8,7 +8,7 @@
 </h5>
 <div class="d-flex justify-content-center">
   <mat-form-field  class="mx-2 mt-4 col-3" style="">
-    <input matInput autofocus>
+    <input matInput autofocus [(ngModel)]="code">
   </mat-form-field>
 </div>
 <button mat-button
