--- a/projectStack/src/app/login-signup/login/login.component.html
+++ b/projectStack/src/app/login-signup/login/login.component.html
@@ -5,33 +5,32 @@
     </h3>
 
       <div class="mt-3 px-5">
-        <mat-form-field appearance="outline" class="w-100 px-2 pt-5">
+        <form [formGroup]="loginFormGroup">
+          <mat-form-field appearance="outline" class="w-100 px-2 pt-5">
             <mat-label>Email</mat-label>
-            <input matInput placeholder="123@example.com">
+            <input matInput placeholder="123@example.com" formControlName="email">
         </mat-form-field>
         <div class="d-flex ">
             <mat-form-field appearance="outline" class="w-100 px-2">
                 <mat-label>Password</mat-label>
-                <input matInput [type]="passwordHide ? 'password' : 'text'" >
+                <input matInput [type]="passwordHide ? 'password' : 'text'"  formControlName="password">
                 <mat-icon matSuffix (click)="passwordHide = !passwordHide" class="iconPassword">{{passwordHide ? 'visibility_off' : 'visibility'}}</mat-icon>
             </mat-form-field>
         </div>
-        <small class="px-2">
+        </form>
+        <div class="px-3">
+          <span class="font-main font-weight-bold font-small">Don't Have An Account? <a  class="font-weight-light" [routerLink]="['/external/register']">Register Now</a> </span>
+        </div>
+        <small class="px-3">
           Forgot Your Password? <b class="pointer">Reset Your Password</b>.
         </small>
-        <button mat-flat-button
+        <custom-button
         color="primary"
-        class="mx-auto d-block mt-4 much-rounded px-5 font-weight-light color-white"
-        [class.py-1]="!loading"
-        [class.py-2]="loading"
-        [disabled]="loading">
-          <span *ngIf="!loading">
+        [passedClass]='{"mx-auto":true, "d-block":true,  "mt-4":true, "much-rounded":true, "px-5":true, "font-weight-light":true, "color-white":true}'
+        [loading]="loading"
+        (click)="login()">
             Login
-          </span>
-
-          <mat-spinner *ngIf="loading" color='primary' diameter="20"></mat-spinner>
-
-        </button>
+        </custom-button>
 
       </div>
 
