adding project dashboard

--- a/projectStack/src/app/dashboard.module/project.module/project-dashboard/project-dashboard.component.html
+++ b/projectStack/src/app/dashboard.module/project.module/project-dashboard/project-dashboard.component.html
@@ -1,28 +1,13 @@
 <app-header></app-header>
 <div class="d-flex justify-content-end">
-<perfect-scrollbar class="sidebar bg-pink">
-  <div style="height: 140px; width: 100%; background-color: #AE3E3E; width: 22vw;" class="d-flex align-items-center px-3">
-    <div style="height: 75px; width: 75px; border-radius: 50%; background-color: #fff; font-size: 2rem;" class="color-pink d-flex justify-content-center font-weight-bold align-items-center">
-        S
-    </div>
-    <div class="d-flex flex-column ml-3">
-      <h5 class="text-center font-weight-bold" style="color: white;">Some Project</h5>
-      <small class="text-center font-weight-normal"  style="color: white;"> Project Type</small>
-    </div>
-  </div>
-  <nav>
-    <div class="sideMenuItem px-3">
-      Home
-    </div>
-    <div class="sideMenuItem px-3">
-      Join Requests
-    </div>
-    <div class="sideMenuItem px-3">
-      Project Timeline
-    </div>
-  </nav>
-</perfect-scrollbar>
-<section class="mainDashboard px-4 py-5">
+<div class="sidebar">
+  <project-sidebar>
+
+  </project-sidebar>
+</div>
+
+
+<!-- <section class="mainDashboard px-4 py-5">
 <div class="w-75">
 <h3 class="color-black font-weight-bold">
   Project Description
@@ -46,5 +31,5 @@
 <div class="w-25">
 
 </div>
-</section>
+</section> -->
 </div>
